# Exercises

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  main.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab3/minimaltimedifference/: CMakeLists.txt  MinimalTimedDifference.cpp  MinimalTimedDifference.h  main.cpp
lab4/geometry/: Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/memorychunk/: MemoryChunk.cpp  MemoryChunk.h  main.cpp
lab5/xxx/: CMakeLists.txt  Xxx.cpp  Xxx.h  main.cpp
lab6/: CMakeLists.txt
lab7/arrayfill/: ArrayFill.cpp  ArrayFill.h  ArrayFillBase.cpp  ArrayFillBase.h  CMakeLists.txt  IncrementalFill.cpp  IncrementalFill.h  UniformFill.cpp  UniformFill.h  main.cpp
lab8/: CMakeLists.txt
lab8/example/: CMakeLists.txt  main.cpp
lab8/pesel/: Pesel.cpp  Pesel.h  main.cpp
lab9/academiaserializer/: CMakeLists.txt  Serialization.cpp  Serialization.h  main.cpp
(+1 files in other folders)
